--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -22,6 +22,38 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+
+
+    location /health {
+                auth_basic off;
+                proxy_pass http://localhost:14265/health;
+                proxy_set_header        Host $host;
+                proxy_set_header        X-Real-IP $remote_addr;
+                proxy_set_header        X-Forwarded-Proto $scheme;
+                proxy_set_header        X-Real-SslId $ssl_session_id;
+        }
+
+    location /api/v1 {
+                auth_basic off;
+                proxy_pass http://localhost:14265/api/v1;
+                default_type  application/json;
+                proxy_set_header        Host $host;
+                proxy_set_header        X-Real-IP $remote_addr;
+                proxy_set_header        X-Forwarded-Proto $scheme;
+                proxy_set_header        X-Real-SslId $ssl_session_id;
+        }
+
+    location /ws {
+                proxy_pass http://localhost:8081/ws;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+                proxy_set_header        Host $host;
+                proxy_set_header        X-Real-IP $remote_addr;
+                proxy_set_header        X-Forwarded-Proto $scheme;
+                proxy_set_header        X-Real-SslId $ssl_session_id;
+                proxy_read_timeout 86400;
+        }
+
     location / {
         proxy_pass  http://localhost:8081;
         proxy_set_header    Host                $http_host;
