--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -23,6 +23,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 
+# Use ssl for 14265 https://github.com/tanglebay/swarm/blob/master/templates/nginx_default.template
 
     location /health {
                 auth_basic off;
