--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -12,6 +12,20 @@ server {
     }
 }
 
+upstream hornet_dashboard {
+    server 127.0.0.1:8081;
+}
+
+upstream hornet_api {
+    server 127.0.0.1:14265;
+}
+# Rate limit requests
+# https://www.nginx.com/blog/rate-limiting-nginx/
+limit_req_zone $binary_remote_addr zone=hornet_dashboard:2m rate=25r/s;
+
+# Rate limit API
+limit_req_zone $binary_remote_addr zone=hornet_api:2m rate=500r/s;
+
 server {
     listen 443 ssl;
     server_name example.org;
@@ -24,49 +38,54 @@ server {
 
 
 # Use ssl for 14265 https://github.com/tanglebay/swarm/blob/master/templates/nginx_default.template
+# https://github.com/nuriel77/hornet-playbook/blob/main/roles/shared-files/hornet.conf.j2
 
+    # health check
     location /health {
-                auth_basic off;
-                proxy_pass http://localhost:14265/health;
-                proxy_set_header        Host $host;
-                proxy_set_header        X-Real-IP $remote_addr;
-                proxy_set_header        X-Forwarded-Proto $scheme;
-                proxy_set_header        X-Real-SslId $ssl_session_id;
-        }
+        auth_basic off;
+        proxy_pass http://hornet_api/health;
+    }
 
-    location /api/v1 {
-                auth_basic off;
-                proxy_pass http://localhost:14265/api/v1;
-                default_type  application/json;
-                proxy_set_header        Host $host;
-                proxy_set_header        X-Real-IP $remote_addr;
-                proxy_set_header        X-Forwarded-Proto $scheme;
-                proxy_set_header        X-Real-SslId $ssl_session_id;
-        }
+    # mqtt
+    location /mqtt {
+        limit_req zone=hornet_api burst=150;
+        proxy_pass http://hornet_api;
+    }
+
+    # hornet api
+    location ~ ^/api/v1/(info|tips|messages|treasury|transactions|milestones|outputs|addresses) {
+        limit_req zone=hornet_api burst={{ vhost_nginx_burst_limit | default('750') }};
+        default_type application/json;
+        auth_basic off;
+        proxy_pass http://hornet_api;
+    }
+
 
     location /ws {
-                proxy_pass http://localhost:8081/ws;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
-                proxy_set_header        Host $host;
-                proxy_set_header        X-Real-IP $remote_addr;
-                proxy_set_header        X-Forwarded-Proto $scheme;
-                proxy_set_header        X-Real-SslId $ssl_session_id;
-                proxy_read_timeout 86400;
-        }
-
-    location / {
-        proxy_pass  http://localhost:8081;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-
-
+    
       # https://stackoverflow.com/questions/12102110/nginx-to-reverse-proxy-websockets-and-enable-ssl-wss
       # websocket settings for reverse proxy
+      
+        proxy_pass http://hornet_dashboard/ws;
         proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_read_timeout 86400;
+    }
+
+    location / {
+        limit_req zone=hornet_dashboard burst=75;
+        proxy_pass http://hornet_dashboard;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_pass_request_headers on;
+        proxy_set_header Connection "keep-alive";
+        proxy_store off;
     }
 }
