--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -54,7 +54,7 @@ server {
 
     # hornet api
     location ~ ^/api/v1/(info|tips|messages|treasury|transactions|milestones|outputs|addresses) {
-        limit_req zone=hornet_api burst={{ vhost_nginx_burst_limit | default('750') }};
+        limit_req zone=hornet_api burst=750;
         default_type application/json;
         auth_basic off;
         proxy_pass http://hornet_api;
